objects/tffa__PerformanceLog__c.object
<CustomObject>
    <description>Log for performance timings</description>
    <fields>
        <fullName>tffa__ApexClass__c</fullName>
        <description>The name of the Apex Class for the transaction</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Apex Class</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ApexMethod__c</fullName>
        <description>The method name of the class involved in the transaction</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Apex Method</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ContextId__c</fullName>
        <description>Execution context ID</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Context ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__CreatedHour__c</fullName>
        <description>Hour value of created date. Useful for summarizing log data on an hourly basis.</description>
        <formula>VALUE(MID(TEXT(CreatedDate),12,2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Hour</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__Entity__c</fullName>
        <description>The name of the primary entity in context</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Entity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__FutureCallCount__c</fullName>
        <description>The number of methods with the future annotation that have been executed (not necessarily completed).</description>
        <label>Future Call Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__Order__c</fullName>
        <defaultValue>0</defaultValue>
        <description>the order of the call in the execution stack</description>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__QueryCount__c</fullName>
        <description>A number of SOQL queries that have been issued.</description>
        <label>Query Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__SelfTimeInMilliseconds__c</fullName>
        <description>Self execution time in millis</description>
        <label>Self Time In Milliseconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__SelfTimeInSeconds__c</fullName>
        <description>SelfTimeInSeconds</description>
        <formula>tffa__SelfTimeInMilliseconds__c /1000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Self Time In Seconds</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__TimeInMilliseconds__c</fullName>
        <description>A number holding the transaction time in milliseconds</description>
        <label>Time in Milliseconds</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__TimeInSeconds__c</fullName>
        <description>A formula field based on Time in Milliseconds for showing time in seconds</description>
        <formula>tffa__TimeInMilliseconds__c /1000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time in Seconds</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <label>Performance Log</label>
    <listViews>
        <fullName>tffa__All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>tffa__Order__c</columns>
        <columns>tffa__ApexClass__c</columns>
        <columns>tffa__ApexMethod__c</columns>
        <columns>tffa__TimeInMilliseconds__c</columns>
        <columns>tffa__SelfTimeInMilliseconds__c</columns>
        <columns>tffa__QueryCount__c</columns>
        <columns>tffa__FutureCallCount__c</columns>
        <columns>tffa__Entity__c</columns>
        <columns>tffa__ContextId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PERF-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Performance Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>